--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <input type="text" class="form-control" id="inputName" placeholder="Your Name">
                   </div>
                   <div class="form-group col-md-6">
-                    <label for="inputPlace">Place</label>
+                    <label for="inputPlace">Pace</label>
                     <input type="text" class="form-control" id="inputPlace" placeholder="Your Location">
                   </div>
                 </div>
